@@ -677,6 +677,9 @@ Release 2.8.0 - UNRELEASED
     HADOOP-11361. Fix a race condition in MetricsSourceAdapter.updateJmxCache.
     (Brahma Reddy Battula via ozawa)
 
+    HADOOP-8174. Remove confusing comment in Path#isAbsolute()
+    (Suresh Srinivas via vinayakumarb)
+
 Release 2.7.1 - UNRELEASED
 
   INCOMPATIBLE CHANGES
